--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,10 @@
             <p>
                 Y este es el parrafo de inicio donde vamos a explicar las cosas increeibles que se pueden hcaer con ramas
             </p>
+            <p>
+               Los blogs son la mejor fomra de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
+               Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.
+            </p>
         </div>
     </div>
 </body>
