--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confinza</span>
+            <span id="tagline">Tu blog de maestro</span>
         </div>
         <div id="post">
             <h1>
@@ -22,6 +22,9 @@
             <p>
                Los blogs son la mejor fomra de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
                Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.
+            </p>
+            <p>
+            Suscribete y dale like
             </p>
         </div>
     </div>
